# aikit-runtime

./: .env.example  .gitignore  .gitleaksignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md  deny.toml
.github/: CODEOWNERS  allowed_signers  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  docs.yml  feature.yml
.github/workflows/: a2a-conformance.yml  chaos.yml  ci.yml  codeql.yml  fuzz.yml  live-smoke.yml  publish.yml  release.yml  security.yml
crates/aikit/: Cargo.toml  LICENSE-MIT
crates/aikit-cli/: Cargo.toml  README.md
crates/aikit-cli/src/: main.rs
crates/aikit-cli/tests/: cli.rs
crates/aikit-core/: Cargo.toml
crates/aikit-core/cassettes/providers/v1/: anthropic.json  deepseek.json  google.json  groq.json  mistral.json  openai.json  openrouter.json  xai.json
crates/aikit-core/catalog/: model-catalog-v0.3-alpha.json
crates/aikit-core/examples/: a2a_tck_sut.rs  capability_request.rs  defense_in_depth.rs  governed_tools.rs  guardrails.rs  plan_mode.rs  policy.rs  reliability.rs  smart_approval.rs  structured_output.rs
crates/aikit-core/src/: agent.rs  budget.rs  cancellation.rs  capabilities.rs  catalog.rs  client.rs  compaction.rs  contract.rs  credentials.rs  durability.rs  durable_runtime.rs  durable_store.rs  durable_worker.rs  dx.rs  error.rs  eval.rs  lib.rs  mcp.rs  media_runtime.rs  memory.rs  multimodal.rs  observability.rs  orchestration.rs  postgres_store.rs  provider_media.rs  provider_validation.rs  reasoning.rs  resilience.rs  routing.rs  runtime.rs  session.rs  sqlite.rs  streaming.rs  temporal_adapter.rs  trace_eval.rs  types.rs
crates/aikit-core/src/governance/: capability.rs  contracts.rs  egress_broker.rs  guardrail.rs  hooks.rs  mod.rs  off_prompt.rs  permissions.rs  plan.rs  policy.rs  policy_adapters.rs  process.rs  reliability.rs  risk.rs  sandbox.rs  skills.rs
crates/aikit-core/src/governance/containment/: container.rs  firecracker.rs  linux.rs  macos.rs  mod.rs  windows.rs
crates/aikit-core/src/protocols/: a2a.rs  a2a_journal.rs  a2a_transport.rs  acp.rs  common.rs  mcp.rs  mcp_io.rs  mcp_sqlite.rs  mcp_transport.rs  mod.rs  tests.rs
crates/aikit-core/src/protocols/fixtures/mcp_2025_11_25/: README.md  initialize_request.json  task_result_request.json  task_tool_call_request.json
crates/aikit-core/src/providers/: anthropic.rs  deepseek.rs  google.rs  groq.rs  mistral.rs  mod.rs  openai.rs  openai_responses.rs  openrouter.rs  xai.rs
crates/aikit-core/src/tools/: mod.rs  web.rs
crates/aikit-core/src/tools/builtin/: bash.rs  fs.rs  mod.rs
crates/aikit-core/tests/: durable_worker_process.rs  process_chaos.rs  provider_cassettes.rs  provider_conformance.rs  session_store_extension.rs
crates/aikit-node/: Cargo.toml  README.md  build.rs  index.d.ts  index.js  package.json
crates/aikit-node/npm/darwin-arm64/: package.json
crates/aikit-node/npm/darwin-x64/: package.json
crates/aikit-node/npm/linux-arm64-gnu/: package.json
crates/aikit-node/npm/linux-x64-gnu/: package.json
crates/aikit-node/npm/win32-x64-msvc/: package.json
crates/aikit-node/src/: lib.rs
crates/aikit-node/tests/: a2a-mapper.cjs  builtin-tools.cjs  evaluate-outcome.cjs  mcp-filter.cjs  multimodal-messages.cjs  production-state.cjs  semantic-validator.cjs  subagent-context.cjs  typing.ts
crates/aikit-py/: Cargo.toml  README.md  aikit.pyi  pyproject.toml
crates/aikit-py/src/: lib.rs
crates/aikit-py/tests/: a2a_mapper.py  builtin_tools.py  evaluate_outcome.py  mcp_filter.py  multimodal_messages.py  production_state.py  semantic_validator.py  subagent_context.py  typing_contract.py
crates/aikit/examples/: conformance.rs  parity.rs  quickstart.rs
crates/aikit/src/: lib.rs
crates/aikit/tests/: live_smoke.rs
docs/: A2A-CONFORMANCE.md  ARCHITECTURE.md  COMPETITIVE-ROADMAP.md  COMPETITOR-SOURCE-REVIEW.md  COMPLIANCE.md  EVALUATIONS.md  FEATURES.md  LIVE-SMOKE.md  MIGRATING-0.2.md  MIGRATING-0.3.md  PARITY-MATRIX.md  PHASE-0-SPIKE.md  PHASE-1-PROGRESS.md  PROJECT-STATUS.md  README.md  RELEASE-EVIDENCE-TEMPLATE.md  RELEASE.md  THREAT-MODEL.md  V1-COMPLETION-MATRIX.md
docs/releases/: README.md  v0.1.0.md
evals/: governance-allowed.json  governance-denied.json  smoke.json
examples/node/: agent_governance.cjs  conformance.cjs  run_options.cjs
examples/python/: agent_governance.py  conformance.py  run_options.py  spike.py
fuzz/: Cargo.toml
fuzz/corpus/stream_lifecycle/: basic.json
fuzz/fuzz_targets/: durable_replay.rs  provider_cassette.rs  stream_lifecycle.rs
scripts/: a2a-conformance.sh  build-node.sh  check-workflow-pins.sh  live-smoke.sh  npm-release-tag.sh  parity-check.sh  prepare-publish-bundle.sh  prepare-pypi-publish.py  publish-crate-idempotent.sh  publish-npm-idempotent.sh  registry-package-status.py  release-check.sh  require-crates-oidc-bootstrap.sh  require-npm-oidc-bootstrap.sh  security-check.sh  stage-node-platform.sh  test-node-package-layout.sh  test-release-helpers.sh  validate-release-run.sh  verify-checksum-manifest.py  wait-crate-version.sh
