[workspace]
resolver = "2"
members = [
    "crates/aikit",
    "crates/aikit-core",
    "crates/aikit-py",
    "crates/aikit-node",
]
# Bare `cargo build`/`cargo test` operate on these (pure-Rust) crates only. The `aikit-py` and
# `aikit-node` cdylibs are built out-of-band (maturin for Python; `scripts/build-node.sh` for
# Node), so they are kept out of the default set — `aikit-py` needs the `extension-module`
# feature to link, and keeping the bindings out keeps a bare `cargo build` fast and pure-Rust.
default-members = ["crates/aikit", "crates/aikit-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["aikit contributors"]
repository = "https://github.com/matakartal/aikit-runtime"
homepage = "https://github.com/matakartal/aikit-runtime"

[workspace.dependencies]
aikit-core = { package = "aikit-runtime-core", path = "crates/aikit-core", version = "=0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
thiserror = "2"

[profile.release]
lto = "thin"
