[package]
name = "aikit-cli"
description = "Source-first command-line interface for aikit-runtime."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[[bin]]
name = "aikit"
path = "src/main.rs"

[dependencies]
aikit-runtime = { path = "../aikit" }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
