[package]
name = "aikit-runtime-core"
description = "The agent-native, governed, provider-agnostic runtime core (the brain)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"

[lib]
# Keep the established internal/public Rust path while using a collision-free registry package.
name = "aikit_core"

[features]
default = []
opentelemetry = ["dep:opentelemetry"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
async-stream.workspace = true
thiserror.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
regex = "1"
jsonschema = { version = "0.47", default-features = false }
schemars = "1"
tempfile = "3"
opentelemetry = { version = "0.32", features = ["trace"], optional = true }

# Bash process hardening (rlimits via pre_exec) is Unix-only; elsewhere the policy still scrubs the
# environment and enforces the wall-clock timeout, just without setrlimit.
[target.'cfg(unix)'.dependencies]
cap-std = "=4.0.2"
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
wiremock = "0.6"
