[package]
name = "aikit-runtime-core"
description = "The agent-native, governed, provider-agnostic runtime core (the brain)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
publish = false

[lib]
# Keep the established internal/public Rust path for workspace consumers.
name = "aikit_core"

[features]
default = []
opentelemetry = ["dep:opentelemetry"]
postgres-store = ["dep:postgres"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
async-stream.workspace = true
thiserror.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
regex = "1"
# 0.40 pulls libsqlite3-sys 0.38, whose build script uses a macro unavailable on our Rust 1.88
# MSRV. Keep the newest compatible rusqlite line until that upstream MSRV boundary is restored.
rusqlite = { version = "0.39", features = ["bundled"] }
url = "2"
jsonschema = { version = "0.47", default-features = false }
schemars = "1"
tempfile = "3"
getrandom = "0.3"
opentelemetry = { version = "0.32", features = ["trace"], optional = true }
postgres = { version = "0.19", optional = true }
yaml-rust2 = { version = "0.11", default-features = false }

# Bash process hardening (rlimits via pre_exec) is Unix-only; elsewhere the policy still scrubs the
# environment and enforces the wall-clock timeout, just without setrlimit.
[target.'cfg(unix)'.dependencies]
cap-std = "=4.0.2"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
wiremock = "0.6"
