[package]
name = "aikit-runtime"
description = "Agent-native, governed, provider-agnostic AI runtime for Rust."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["ai", "agents", "llm", "governance", "sdk"]
categories = ["api-bindings", "asynchronous"]

[lib]
# Preserve the ergonomic `use aikit::...` Rust import while the collision-free registry package is
# installed with `cargo add aikit-runtime`.
name = "aikit"

[features]
default = []
opentelemetry = ["aikit-core/opentelemetry"]

[dependencies]
aikit-core.workspace = true

[dev-dependencies]
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile = "3"
